--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -4,7 +4,7 @@ $border-color: red;
 .app {
   font-family: helvetica, arial, sans-serif;
   padding: 2em;
-  border: 5px solid $border-color;
+  border: 5px solid green;
 
   p {
     background-color: $bg-color;
